# ai-hiring-market-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: job_site_candidates.csv
configs/: ai_keywords.yaml  ats_patterns.yaml  classification_standards.yaml  company_ai_hiring_signals.yaml  company_candidates.csv  company_evidence.csv  company_seed.csv  company_signal_schema.yml  jd_lineage_types.yaml  jd_schema.yaml  job_site_discovery_queries.yaml  job_site_discovery_sources.yaml  pipeline_stages.yaml  policy_keywords.yaml  promotion_rules.yaml  quality_gate_rules.yaml  source_grading_rules.yaml  source_registry_template.csv  source_relationship_types.yaml  source_rules.yaml  status_standards.yaml  taxonomy_v1.yaml
docs/: approved_source_collection.md  ats_intelligence_layer.md  biz_voyager_comparison.md  classification_standards.md  company_ai_hiring_likelihood.md  company_screening_policy.md  jd_duplicate_lineage.md  jd_schema.md  job_site_discovery.md  korean_market_scope.md  legal_and_ethics_policy.md  operational_loops.md  phase0_5_site_screening.md  phase0_job_site_discovery.md  phase0_job_source_registry.md  phase1_company_discovery.md  phase2_source_discovery_verification.md  phase3_jd_collection.md  phase4_jd_quality_gate.md  phase5_master_dataset.md  phase6_jd_resume_matching_research.md  pipeline_architecture.md  pipeline_operations.md  promotion_rules.md  source_compliance_review.md  source_discovery_routes.md  source_relationship_graph.md  source_selection_criteria.md  status_standards.md  taxonomy_v1.md
runtime/: errors.csv  (+20 more)
(+107 files in other folders)
